--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-	<display-name>maven-web-project</display-name>
+	<display-name>maven-web-project-deploy</display-name>
 
 	<!--
 		There are three means to configure Wickets configuration mode and they 
